# jovian

./: README.md  pyproject.toml  requirements.txt
configs/: example.yaml
jovian/config/: __init__.py  train.py
jovian/constants/: constants.py
jovian/models/: multigpt.py
jovian/utils/: utils.py
scripts/: train_multigpt.py
